--- a/v2.0/v2.css
+++ b/v2.0/v2.css
@@ -643,6 +643,38 @@ html, body {
   z-index: 1;
 }
 
+
+/* ========================================
+   ФОН: main-bg-container — самый нижний слой
+   ======================================== */
+
+/* Общий контейнер фона */
+.main-bg-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10; /* 🔥 Самый нижний слой */
+  pointer-events: none; /* Клик сквозь фон */
+  overflow: hidden;
+}
+
+.main-bg {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.main-bg img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+
 /* ========================================
    🖥️ МЕДИА-ЗАПРОС: ПК (1280px и выше)
    ======================================== */
@@ -654,7 +686,6 @@ html, body {
   .menu-toggle,
   .instagram-section,
   .center-info,
-  .center-photobg,
   .mid-carousel,
   .midel-carousel,
   .info-features {
@@ -1033,9 +1064,26 @@ html, body {
 .label-1 { top: 300px; left: 930px;}
 .label-2 { top: 495px; left: 870px;}
 .label-3 { top: 676px; left: 875px;}
-
-
 /*END*/
+
+.center-photobg {
+    width: 1920px;
+    height: 1331px;
+    margin: 0 auto; /* центрируем */
+    overflow: hidden;
+    position: relative;
+    z-index: 2;
+  }
+
+  .center-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1920px;
+    height: 1300px;
+    object-fit: cover;
+    z-index: -1;
+  }
 
 
 
@@ -1055,7 +1103,6 @@ html, body {
 .menu-toggle,
 .instagram-section,
 .center-info,
-.center-photobg,
 .mid-carousel,
 .features-wrapper{
   display: none;
@@ -1831,6 +1878,25 @@ html, body {
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
   }
 
+
+  .center-photobg {
+    width: 323px;
+    height: 947px;
+    margin: 0 auto;
+    overflow: hidden;
+    position: relative;
+    z-index: 2;
+  }
+
+  .center-photobg .center-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
 }
 /* ========================================
    📱 МЕДИА-ЗАПРОС: ТЕЛЕФОН (0px — 767px)
@@ -1848,7 +1914,6 @@ html, body {
 .personal-menu,
 .instagram-section,
 .center-info,
-.center-photobg,
 .mid-carousel,
 .features-wrapper{
   display: none;
@@ -2825,5 +2890,23 @@ html, body {
 
 /*END*/
 
+
+.center-photobg {
+    width: 323px;
+    height: 936px; /* или другое значение под макет */
+    margin: 0 auto;
+    overflow: hidden;
+    position: relative;
+    z-index: 2;
+  }
+
+  .center-photobg .center-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 323px;
+    height: 586px;
+    object-fit: cover;
+  }
 
 }
