--- a/v3.0/v2.css
+++ b/v3.0/v2.css
@@ -541,6 +541,138 @@ html, body {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.why {
+  position: relative;
+  z-index: 0;
+  margin: 88px 0 108px;
+}
+
+/* === КОНТЕЙНЕР С ИНФОЙ — ПОВЕРХ ФОНА === */
+.why-info {
+  position: relative;
+  top: -1000px;
+  left: 900px;
+  width: 100%;
+  padding: 20px; /* Отступы от краёв */
+  box-sizing: border-box;
+  z-index: 1; /* Выше изображения */
+}
+
+/* Для демонстрации блоков */
+.why div {
+  outline: 1px solid red;
+}
+
+.why-image {
+  width: 100%;
+  line-height: 0;
+}
+
+.why-image__picture {
+  width: 100%;
+  height: 100%;
+}
+
+.why-image__img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.why__title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 41px;
+  line-height: 118%;
+  color: #27AE60;
+  margin-bottom: 38px;
+}
+
+.why-list-item {
+  margin-bottom: 28px;
+  display: flex;
+  gap: 12px;
+}
+
+.why-list-item:last-child {
+  margin-bottom: 0;
+}
+
+.why-list-item-icon__img{
+  width:30px;
+  height: 30px;
+}
+
+.why-list-item-icon {
+  width: 60px;
+  height: 60px;
+  flex-shrink: 0;
+  padding: 15px;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 0 4px 35px rgba(25, 130, 189, 0.18);
+  line-height: 0;
+}
+
+.why-list-item-icon svg {
+  width: 100%;
+  height: 100%;
+}
+
+.why-list-item__title {
+  font-size: 20px;
+  line-height: 118%;
+  font-weight: 700;
+}
+
+.why-list-item__text {
+  margin-top: 5px;
+  font-size: 18px;
+  line-height: 118%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* ========================================
    🖥️ МЕДИА-ЗАПРОС: ПК (1280px и выше)
    ======================================== */
@@ -1341,6 +1473,99 @@ html, body {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* === КОНТЕЙНЕР С ИНФОЙ — ПОВЕРХ ФОНА === */
+.why-info {
+  position: relative;
+  top:  -400px;
+  left:  0px;
+  width: 100%;
+  padding: 20px; /* Отступы от краёв */
+  box-sizing: border-box;
+  z-index: 1; /* Выше изображения */
+}
+
+
+
+
+.why__title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 41px;
+  line-height: 118%;
+  color: #27AE60;
+  margin-bottom: 38px;
+}
+
+
+.why-list-item-icon__img{
+  width:30px;
+  height: 30px;
+}
+.why-list-item-icon {
+  width: 60px;
+  height: 60px;
+  flex-shrink: 0;
+  padding: 15px;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 0 4px 35px rgba(25, 130, 189, 0.18);
+  line-height: 0;
+  margin: 0px;
+}
+
+
+
+.why-list-item__title {
+  font-size: 20px;
+  line-height: 118%;
+  font-weight: 700;
+}
+
+.why-list-item__text {
+  margin-top: 5px;
+  font-size: 18px;
+  line-height: 118%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
 
 /* ========================================
@@ -1821,5 +2046,62 @@ html, body {
 }
 
 
+
+
+
+
+
+
+
+
+
+/* === КОНТЕЙНЕР С ИНФОЙ — ПОВЕРХ ФОНА === */
+.why-info {
+  position: relative;
+  top:  -100px;
+  left:  0px;
+  width: 100%;
+  padding: 20px; /* Отступы от краёв */
+  box-sizing: border-box;
+  z-index: 1; /* Выше изображения */
+}
+
+.why__title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 118%;
+  color: #27AE60;
+  margin-bottom: 38px;
+}
+
+
+.why-list-item-icon__img{
+  width: 17px;
+  height: 17px;
+}
+.why-list-item-icon {
+  width: 35px;
+  height: 35px;
+  flex-shrink: 0;
+  padding: 9px;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 0 4px 35px rgba(25, 130, 189, 0.18);
+  line-height: 0;
+  margin: 0px;
+}
+
+.why-list-item__title {
+  font-size: 16px;
+  line-height: 118%;
+  font-weight: 700;
+}
+
+.why-list-item__text {
+  margin-top: 5px;
+  font-size: 14px;
+  line-height: 118%;
+}
 
 }
